--- a/public/index.html
+++ b/public/index.html
@@ -250,5 +250,8 @@
         loadBlocks();
     </script>
 </body>
+<!-- TO RUN THE FILE NEED NODE
+  THEN npm start
+  open http://localhost:3000 -->
 </html>
 
